# rust-tui-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SYNC.md  cargo-generate.toml  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: build.yml
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  i18n.rs  main.rs  monitor.rs  theme.rs  ui.rs
crates/core/: Cargo.toml
crates/core/benches/: config_bench.rs
crates/core/examples/: config_demo.rs
crates/core/src/: lib.rs
crates/core/tests/: integration_test.rs
docs/: architecture.md  index.md  monitoring-panel.md  release.md  tdd.md  tui-patterns.md
scripts/: sync.sh
