[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.102"

# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.33"
tracing-appender = "0.2"

# Shared utilities
dirs = "6"
toml = "0.8.23"
tempfile = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"

# Uncomment when needed for your TUI tool:
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# indicatif = "0.17"
# Security: uncomment when your TUI handles secrets, tokens, or passwords.
secrecy = "0.11"
# dotenvy = "0.15"
# self_update = "0.42"

# workspace crates
{{ project-name }}-core = { path = "crates/core" }
{{ project-name }}-tui = { path = "apps/tui" }

[workspace.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.25"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Hard blockers (matches CLAUDE.md non-negotiables)
todo = "deny"
dbg_macro = "deny"

# Production hygiene (promoted to error by CI's -D warnings)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unwrap_in_result = "warn"

# Documentation discipline
missing_errors_doc = "warn"
missing_panics_doc = "warn"
allow_attributes_without_reason = "warn"

# Pedantic group
pedantic = "warn"

# Cargo.toml hygiene
cargo = "warn"

# Security
indexing_slicing = "warn"

# Pedantic lints that are too noisy for this template
similar_names = "allow"
module_name_repetitions = "allow"
