[package]
name = "{{ project-name }}-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "{{ project-name }}-tui"
path = "src/main.rs"

[dependencies]
{{ project-name }}-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"

[build-dependencies]
built = "0.7"

[lints]
workspace = true

[lints.rust]
unsafe_code = "deny"
